--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,129 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+
+jobs:
+  build:
+    docker:
+      - image: circleci/node:12.18.0
+    working_directory: ~/build
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      - restore_cache:
+          keys:
+            - app-{{ checksum "package.json" }}
+            - app-
+      - run:
+          name: Install dependencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: app-{{ checksum "package.json" }}
+
+  deploy-to-aws-s3:
+    docker:
+      - image: circleci/node:12.18.0
+    working_directory: ~/build
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      - run:
+          name: Install AWS CLI
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+          name: Build Angular project
+          command: |
+            npm install
+            npm install -g @angular/cli
+            ng build --prod
+            cd dist/netflix
+            zip ../dist/netflix.zip -r * .[^.]*
+            echo "Build Successful"
+
+      - run:
+          name: "Deploy to AWS S3"
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/build/dist/netflix s3://${AWS_BUCKET_PROD} --delete
+
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/build/dist/netflix s3://${AWS_BUCKET_STAGING} --delete
+
+            else
+              aws --region ${AWS_REGION} s3 sync ~/build/dist/netflix s3://${AWS_BUCKET_DEV} --delete
+            fi
+
+  deploy-to-cloudfront:
+    docker:
+      - image: circleci/node:12.18.0
+    working_directory: ~/build
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      - run:
+          name: Install AWS CLI
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+          name: Build Angular project
+          command: |
+            npm install
+            npm install -g @angular/cli
+            ng build --prod
+            cd dist/netflix
+            zip ../dist/netflix.zip -r * .[^.]*
+            echo "Build Successful"
+
+      - run:
+          name: "Deploy to AWS CloudFront"
+          command: |
+            aws configure set preview.cloudfront true
+            if [ "${CIRCLE_BRANCH}" == "master" ]
+            then
+              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_PROD}  --path /\*
+
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]
+            then
+              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_STAGING}  --path /\*
+
+            else
+              aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV}  --path /\*
+            fi
+
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  build_and_deloy:
     jobs:
-      - welcome/run
+      - build
+      - deploy-to-aws-s3:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+      - deploy-to-cloudfront:
+          requires:
+            - deploy-to-aws-s3
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
