--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,7 @@ jobs:
           name: Build Angular project
           command: |
             npm install
-            npm install -g @angular/cli
-            ng build --prod
+            npm run build
             cd dist/netflix
             zip ../dist/netflix.zip -r * .[^.]*
             echo "Build Successful"
