--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,71 @@
 version: 2.1
 
+executors:
+  app-executor:
+    docker:
+      - image: circleci/node:12.18.0
+    working_directory: ~/build
+
+aliases:
+  - &show-current-branch-name:
+    run:
+      name: Show current branch
+      command: echo ${CIRCLE_BRANCH}
+
+  - &restore-cache:
+    restore_cache:
+      keys:
+        - app-{{ checksum "package.json" }}
+        - app-
+
+  - &install-dependencies:
+    run:
+      name: Install dependencies
+      command: npm install
+
+  - &save-cache:
+    save_cache:
+      paths:
+        - node_modules
+      key: app-{{ checksum "package.json" }}
+
+  - &build-angular-project:
+    run:
+      name: Build Angular project
+      command: |
+        npm install
+        npm run build
+        cd dist/netflix
+        zip ../dist.zip -r * .[^.]*
+        echo "Build Successful"
+
+  - &install-aws-cli:
+    run:
+      name: Install AWS CLI
+      working_directory: /
+      command: |
+        sudo apt-get -y -qq update
+        sudo apt-get install -y awscli
+        sudo apt-get install -y python-pip python-dev build-essential
+
+
 jobs:
   build:
-    docker:
-      - image: circleci/node:12.18.0
-    working_directory: ~/build
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - restore_cache:
-          keys:
-            - app-{{ checksum "package.json" }}
-            - app-
-      - run:
-          name: Install dependencies
-          command: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: app-{{ checksum "package.json" }}
+      - *show-current-branch-name
+      - *restore-cache
+      - *install-dependencies
+      - *save-cache
 
   deploy-to-aws-s3:
-    docker:
-      - image: circleci/node:12.18.0
-    working_directory: ~/build
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - run:
-          name: Install AWS CLI
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Build Angular project
-          command: |
-            npm install
-            npm run build
-            cd dist/netflix
-            zip ../dist.zip -r * .[^.]*
-            echo "Build Successful"
+      - *show-current-branch
+      - *install-aws-cli
+      - *build-angular-project
 
       - run:
           name: "Deploy to AWS S3"
@@ -63,29 +83,12 @@ jobs:
             fi
 
   deploy-to-cloudfront:
-    docker:
-      - image: circleci/node:12.18.0
-    working_directory: ~/build
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - run:
-          name: Install AWS CLI
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python-pip python-dev build-essential
-      - run:
-          name: Build Angular project
-          command: |
-            npm install
-            npm run build
-            cd dist/netflix
-            zip ../dist.zip -r * .[^.]*
-            echo "Build Successful"
+      - *show-current-branch
+      - *install-aws-cli
+      - *build-angular-project
 
       - run:
           name: "Deploy to AWS CloudFront"
