--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,16 @@ jobs:
       - *install-dependencies
       - *save-cache
 
+  lint-typescript:
+    executor: app-executor
+    steps:
+      - checkout
+      - *show-current-branch
+      - *restore-cache
+      - run:
+        name: "Lint Typescripe Code"
+        command: npm run lint
+
   deploy-to-aws-s3:
     executor: app-executor
     steps:
@@ -110,9 +120,18 @@ workflows:
   build_and_deloy:
     jobs:
       - build
+      - lint-typescript
+          requires: 
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
       - deploy-to-aws-s3:
           requires:
-            - build
+            - linting
           filters:
             branches:
               only:
