chore: added prettier job and config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,11 +63,23 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *restore-cache
       - run:
         name: "Lint Typescripe Code"
         command: npm run lint
+
+  prettier:
+    executor: app-executor
+    steps:
+        - checkout
+        - *show-current-branch-name
+        - *restore-cache
+    - run:
+        name: Run Prettier Check
+        command: /
+          npm install prettier
+          npm run prettier:check
 
   deploy-to-aws-s3:
     executor: app-executor
@@ -120,6 +132,17 @@ workflows:
   build_and_deloy:
     jobs:
       - build
+
+      - prettier:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+
       - lint-typescript
           requires: 
             - build
@@ -129,15 +152,18 @@ workflows:
                 - develop
                 - staging
                 - master
+
       - deploy-to-aws-s3:
           requires:
-            - linting
+            - lint-typescript
+            - prettier
           filters:
             branches:
               only:
                 - develop
                 - staging
                 - master
+                
       - deploy-to-cloudfront:
           requires:
             - deploy-to-aws-s3
