--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
+    "prettier:write": "prettier --write 'src/**/*.{ts,json}'",
     "e2e": "ng e2e"
   },
   "private": true,
