--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
@@ -86,7 +86,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
