fix: removed colons from alias definitions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,29 +7,29 @@ executors:
     working_directory: ~/build
 
 aliases:
-  - &show-current-branch-name:
+  - &show-current-branch-name
     run:
       name: Show current branch
       command: echo ${CIRCLE_BRANCH}
 
-  - &restore-cache:
+  - &restore-cache
     restore_cache:
       keys:
         - app-{{ checksum "package.json" }}
         - app-
 
-  - &install-dependencies:
+  - &install-dependencies
     run:
       name: Install dependencies
       command: npm install
 
-  - &save-cache:
+  - &save-cache
     save_cache:
       paths:
         - node_modules
       key: app-{{ checksum "package.json" }}
 
-  - &build-angular-project:
+  - &build-angular-project
     run:
       name: Build Angular project
       command: |
@@ -39,7 +39,7 @@ aliases:
         zip ../dist.zip -r * .[^.]*
         echo "Build Successful"
 
-  - &install-aws-cli:
+  - &install-aws-cli
     run:
       name: Install AWS CLI
       working_directory: /
@@ -47,7 +47,6 @@ aliases:
         sudo apt-get -y -qq update
         sudo apt-get install -y awscli
         sudo apt-get install -y python-pip python-dev build-essential
-
 
 jobs:
   build:
