--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     working_directory: ~/build
 
 aliases:
-  - &show-current-branch-name:
+  - &show-current-branch-name
     run:
       name: Show current branch
       command: echo ${CIRCLE_BRANCH}
@@ -18,18 +18,18 @@ aliases:
         - app-{{ checksum "package.json" }}
         - app-
 
-  - &install-dependencies:
+  - &install-dependencies
     run:
       name: Install dependencies
       command: npm install
 
-  - &save-cache:
+  - &save-cache
     save_cache:
       paths:
         - node_modules
       key: app-{{ checksum "package.json" }}
 
-  - &build-angular-project:
+  - &build-angular-project
     run:
       name: Build Angular project
       command: |
@@ -39,7 +39,7 @@ aliases:
         zip ../dist.zip -r * .[^.]*
         echo "Build Successful"
 
-  - &install-aws-cli:
+  - &install-aws-cli
     run:
       name: Install AWS CLI
       working_directory: /
@@ -63,7 +63,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *restore-cache
       - run:
         name: "Lint Typescripe Code"
@@ -73,7 +73,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
@@ -96,7 +96,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
