fix: correct name of linting job in s3 deployment job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ workflows:
                 - master
       - deploy-to-aws-s3:
           requires:
-            - linting
+            - lint-typescript
           filters:
             branches:
               only:
