--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     working_directory: ~/build
 
 aliases:
-  - &show-current-branch-name:
+  - &show-current-branch-name
     run:
       name: Show current branch
       command: echo ${CIRCLE_BRANCH}
@@ -18,7 +18,7 @@ aliases:
         - app-{{ checksum "package.json" }}
         - app-
 
-  - &install-dependencies:
+  - &install-dependencies
     run:
       name: Install dependencies
       command: npm install
@@ -29,7 +29,7 @@ aliases:
         - node_modules
       key: app-{{ checksum "package.json" }}
 
-  - &build-angular-project:
+  - &build-angular-project
     run:
       name: Build Angular project
       command: |
@@ -39,7 +39,7 @@ aliases:
         zip ../dist.zip -r * .[^.]*
         echo "Build Successful"
 
-  - &install-aws-cli:
+  - &install-aws-cli
     run:
       name: Install AWS CLI
       working_directory: /
@@ -66,8 +66,8 @@ jobs:
       - *show-current-branch-name
       - *restore-cache
       - run:
-        name: "Lint Typescripe Code"
-        command: npm run lint
+          name: "Lint Typescripe Code"
+          command: npm run lint
 
   prettier:
     executor: app-executor
