--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
@@ -108,7 +108,7 @@ jobs:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
+      - *show-current-branch-name
       - *install-aws-cli
       - *build-angular-project
 
