--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ workflows:
                 - staging
                 - master
 
-      - lint-typescript
+      - lint-typescript:
           requires: 
             - build
           filters:
