--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
+    "prettier:write": "prettier --write 'src/**/*.{ts,json}'",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -38,6 +40,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "prettier": "^2.1.2",
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
