--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,18 @@
 version: 2.1
 
+orbs:
+  slack: circleci/slack@3.4.2
+
 executors:
   app-executor:
     docker:
       - image: circleci/node:12.18.0
     working_directory: ~/build
+
+  slack-executor:
+    docker:
+      - image: cibuilds/base:latest
+    resource_class: small
 
 aliases:
   - &show-current-branch-name
@@ -126,6 +134,15 @@ jobs:
               aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID_DEV}  --path /\*
             fi
 
+  slack-notification:
+    executor: slack-executor
+    steps:
+      - slack/notify:
+          message: "${CIRCLE_BRANCH} branch deployment to AWS S3 and Cloudfront is complete."
+          webhook: ${SLACK_WEBHOOK}
+      - status:
+          webhook: ${SLACK_WEBHOOK}
+
 workflows:
   build_and_deloy:
     jobs:
@@ -165,6 +182,16 @@ workflows:
       - deploy-to-cloudfront:
           requires:
             - deploy-to-aws-s3
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+
+      - slack-notification:
+          requires:
+            - deploy-to-cloudfront
           filters:
             branches:
               only:
