--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
-    "prettier:write": "prettier --write 'src/**/*.{ts,json}'",
+    "prettier:write": "prettier --write src/**/*.ts",
     "e2e": "ng e2e"
   },
   "private": true,
